// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App.js integration tests should change state on the checkbox change 1`] = `
<div
  className="app"
>
  <header />
  <main
    className="main"
  >
    <article
      className="cat-food"
    >
      <header>
        <h2
          className="cat-food__title"
        >
          Ты сегодня покормил кота?
        </h2>
      </header>
      <section
        className="cat-food-content"
      >
        <section
          aria-label="Нямушка с фуа-гра"
          className="food-item"
        >
          <label
            className="food-item__label"
          >
            <input
              aria-hidden="true"
              className="food-item__checkbox"
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            <div
              className="food-item__content "
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                className="button-shape"
                viewBox="0 0 328.5 488.5"
                x="0px"
                y="0px"
              >
                <path
                  d="M63.7,4.3h250.6c5.5,0,10,4.5,10,10v460c0,5.5-4.5,10-10,10h-300c-5.5,0-10-4.5-10-10V59.9L63.7,4.3z"
                />
              </svg>
              <header
                className="food-item__header "
              >
                <p
                  className="food-item__text"
                >
                  Сказочное заморское яство
                </p>
                <h3
                  className="food-item__title"
                >
                  Нямушка 
                  <br />
                  <span
                    className="small-title"
                  >
                    с фуа-гра
                  </span>
                </h3>
                <ul
                  className="food-item__list"
                >
                  <li
                    className="food-item__item"
                  >
                    10
                     порций
                  </li>
                  <li
                    className="food-item__item"
                  >
                    мышь в подарок
                  </li>
                </ul>
              </header>
              <div
                className="food-item__mask"
              >
                <img
                  alt="Кот смотрит прямо в душу."
                  className="food-item__image "
                  src="cat.png"
                />
              </div>
              <span
                className="
        food-item__circle 
        
         
        
        
    "
              >
                <p
                  className="food-item__weight aligner"
                >
                  0.5
                </p>
                <span
                  className="font-smaller"
                >
                  кг
                </span>
              </span>
            </div>
          </label>
          <p
            className="food-item__description"
          >
            Чего стоишь? Порадуй котэ, 
            <a
              aria-label="Купить корм"
              className="reset-link-style link_blue"
              href="#"
            >
              купи.
            </a>
          </p>
        </section>
        <section
          aria-label="Нямушка с рыбой"
          className="food-item"
        >
          <label
            className="food-item__label"
          >
            <input
              aria-hidden="true"
              className="food-item__checkbox"
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            <div
              className="food-item__content "
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                className="button-shape"
                viewBox="0 0 328.5 488.5"
                x="0px"
                y="0px"
              >
                <path
                  d="M63.7,4.3h250.6c5.5,0,10,4.5,10,10v460c0,5.5-4.5,10-10,10h-300c-5.5,0-10-4.5-10-10V59.9L63.7,4.3z"
                />
              </svg>
              <header
                className="food-item__header "
              >
                <p
                  className="food-item__text"
                >
                  Сказочное заморское яство
                </p>
                <h3
                  className="food-item__title"
                >
                  Нямушка 
                  <br />
                  <span
                    className="small-title"
                  >
                    с рыбой
                  </span>
                </h3>
                <ul
                  className="food-item__list"
                >
                  <li
                    className="food-item__item"
                  >
                    40
                     порций
                  </li>
                  <li
                    className="food-item__item"
                  >
                    2 мыши в подарок
                  </li>
                </ul>
              </header>
              <div
                className="food-item__mask"
              >
                <img
                  alt="Кот смотрит прямо в душу."
                  className="food-item__image "
                  src="cat.png"
                />
              </div>
              <span
                className="
        food-item__circle 
        
         
        
        
    "
              >
                <p
                  className="food-item__weight aligner"
                >
                  2
                </p>
                <span
                  className="font-smaller"
                >
                  кг
                </span>
              </span>
            </div>
          </label>
          <p
            className="food-item__description"
          >
            Чего стоишь? Порадуй котэ, 
            <a
              aria-label="Купить корм"
              className="reset-link-style link_blue"
              href="#"
            >
              купи.
            </a>
          </p>
        </section>
        <section
          aria-label="Нямушка с курой"
          className="food-item"
        >
          <label
            className="food-item__label"
          >
            <input
              aria-hidden="true"
              className="food-item__checkbox"
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            <div
              className="food-item__content "
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                className="button-shape"
                viewBox="0 0 328.5 488.5"
                x="0px"
                y="0px"
              >
                <path
                  d="M63.7,4.3h250.6c5.5,0,10,4.5,10,10v460c0,5.5-4.5,10-10,10h-300c-5.5,0-10-4.5-10-10V59.9L63.7,4.3z"
                />
              </svg>
              <header
                className="food-item__header "
              >
                <p
                  className="food-item__text"
                >
                  Сказочное заморское яство
                </p>
                <h3
                  className="food-item__title"
                >
                  Нямушка 
                  <br />
                  <span
                    className="small-title"
                  >
                    с курой
                  </span>
                </h3>
                <ul
                  className="food-item__list"
                >
                  <li
                    className="food-item__item"
                  >
                    100
                     порций
                  </li>
                  <li
                    className="food-item__item"
                  >
                    5 мышей в подарок
                  </li>
                  <li
                    className="food-item__item"
                  >
                    заказчик доволен
                  </li>
                </ul>
              </header>
              <div
                className="food-item__mask"
              >
                <img
                  alt="Кот смотрит прямо в душу."
                  className="food-item__image "
                  src="cat.png"
                />
              </div>
              <span
                className="
        food-item__circle 
        
         
        
        
    "
              >
                <p
                  className="food-item__weight aligner"
                >
                  5
                </p>
                <span
                  className="font-smaller"
                >
                  кг
                </span>
              </span>
            </div>
          </label>
          <p
            className="food-item__description"
          >
            Чего стоишь? Порадуй котэ, 
            <a
              aria-label="Купить корм"
              className="reset-link-style link_blue"
              href="#"
            >
              купи.
            </a>
          </p>
        </section>
      </section>
    </article>
  </main>
  <footer />
</div>
`;

exports[`App.js integration tests should change state on the checkbox change 2`] = `
<section
  aria-label="Нямушка с фуа-гра"
  className="food-item"
>
  <label
    className="food-item__label"
  >
    <input
      aria-hidden="true"
      className="food-item__checkbox"
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="food-item__content "
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <svg
        className="button-shape"
        viewBox="0 0 328.5 488.5"
        x="0px"
        y="0px"
      >
        <path
          d="M63.7,4.3h250.6c5.5,0,10,4.5,10,10v460c0,5.5-4.5,10-10,10h-300c-5.5,0-10-4.5-10-10V59.9L63.7,4.3z"
        />
      </svg>
      <header
        className="food-item__header "
      >
        <p
          className="food-item__text"
        >
          Сказочное заморское яство
        </p>
        <h3
          className="food-item__title"
        >
          Нямушка 
          <br />
          <span
            className="small-title"
          >
            с фуа-гра
          </span>
        </h3>
        <ul
          className="food-item__list"
        >
          <li
            className="food-item__item"
          >
            10
             порций
          </li>
          <li
            className="food-item__item"
          >
            мышь в подарок
          </li>
        </ul>
      </header>
      <div
        className="food-item__mask"
      >
        <img
          alt="Кот смотрит прямо в душу."
          className="food-item__image "
          src="cat.png"
        />
      </div>
      <span
        className="
        food-item__circle 
        
         
        food-item__circle_sel
        
    "
      >
        <p
          className="food-item__weight aligner"
        >
          0.5
        </p>
        <span
          className="font-smaller"
        >
          кг
        </span>
      </span>
    </div>
  </label>
  <p
    className="food-item__description"
  >
    Печень утки разварная с артишоками.
  </p>
</section>
`;

exports[`App.js integration tests should change state on the checkbox change 3`] = `
<section
  aria-label="Нямушка с фуа-гра"
  className="food-item"
>
  <label
    className="food-item__label"
  >
    <input
      aria-hidden="true"
      className="food-item__checkbox"
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="food-item__content "
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <svg
        className="button-shape"
        viewBox="0 0 328.5 488.5"
        x="0px"
        y="0px"
      >
        <path
          d="M63.7,4.3h250.6c5.5,0,10,4.5,10,10v460c0,5.5-4.5,10-10,10h-300c-5.5,0-10-4.5-10-10V59.9L63.7,4.3z"
        />
      </svg>
      <header
        className="food-item__header "
      >
        <p
          className="food-item__text"
        >
          Сказочное заморское яство
        </p>
        <h3
          className="food-item__title"
        >
          Нямушка 
          <br />
          <span
            className="small-title"
          >
            с фуа-гра
          </span>
        </h3>
        <ul
          className="food-item__list"
        >
          <li
            className="food-item__item"
          >
            10
             порций
          </li>
          <li
            className="food-item__item"
          >
            мышь в подарок
          </li>
        </ul>
      </header>
      <div
        className="food-item__mask"
      >
        <img
          alt="Кот смотрит прямо в душу."
          className="food-item__image "
          src="cat.png"
        />
      </div>
      <span
        className="
        food-item__circle 
        
         
        
        
    "
      >
        <p
          className="food-item__weight aligner"
        >
          0.5
        </p>
        <span
          className="font-smaller"
        >
          кг
        </span>
      </span>
    </div>
  </label>
  <p
    className="food-item__description"
  >
    Чего стоишь? Порадуй котэ, 
    <a
      aria-label="Купить корм"
      className="reset-link-style link_blue"
      href="#"
    >
      купи.
    </a>
  </p>
</section>
`;

exports[`App.js integration tests should change state on the checkbox change 4`] = `
<section
  aria-label="Нямушка с фуа-гра"
  className="food-item"
>
  <label
    className="food-item__label"
  >
    <input
      aria-hidden="true"
      className="food-item__checkbox"
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="food-item__content "
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <svg
        className="button-shape"
        viewBox="0 0 328.5 488.5"
        x="0px"
        y="0px"
      >
        <path
          d="M63.7,4.3h250.6c5.5,0,10,4.5,10,10v460c0,5.5-4.5,10-10,10h-300c-5.5,0-10-4.5-10-10V59.9L63.7,4.3z"
        />
      </svg>
      <header
        className="food-item__header "
      >
        <p
          className="food-item__text"
        >
          Сказочное заморское яство
        </p>
        <h3
          className="food-item__title"
        >
          Нямушка 
          <br />
          <span
            className="small-title"
          >
            с фуа-гра
          </span>
        </h3>
        <ul
          className="food-item__list"
        >
          <li
            className="food-item__item"
          >
            10
             порций
          </li>
          <li
            className="food-item__item"
          >
            мышь в подарок
          </li>
        </ul>
      </header>
      <div
        className="food-item__mask"
      >
        <img
          alt="Кот смотрит прямо в душу."
          className="food-item__image "
          src="cat.png"
        />
      </div>
      <span
        className="
        food-item__circle 
        
         
        food-item__circle_sel
        
    "
      >
        <p
          className="food-item__weight aligner"
        >
          0.5
        </p>
        <span
          className="font-smaller"
        >
          кг
        </span>
      </span>
    </div>
  </label>
  <p
    className="food-item__description"
  >
    Печень утки разварная с артишоками.
  </p>
</section>
`;
